unpackaged/main/default/objects/Advertising_Item__c/Advertising_Item__c.object-meta.xml
<CustomObject>
    <label>Advertising Item</label>
    <nameField>
        <label>Advertising Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Advertising Items</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>