unpackaged/main/default/objects/Advertising_Item__c/fields/Advertising_Type__c.field-meta.xml
<CustomField>
    <fullName>Advertising_Type__c</fullName>
    <label>Advertising Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brochure/Worksheet/Pamphlet</fullName>
            </value>
            <value>
                <fullName>Business Card</fullName>
            </value>
            <value>
                <fullName>Business Envelope</fullName>
            </value>
            <value>
                <fullName>Email Signature</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Fax Coversheet</fullName>
            </value>
            <value>
                <fullName>Form Letter</fullName>
            </value>
            <value>
                <fullName>Group Email</fullName>
            </value>
            <value>
                <fullName>Letterhead</fullName>
            </value>
            <value>
                <fullName>Newsletter/Circular</fullName>
            </value>
            <value>
                <fullName>Periodical Print/Reprint</fullName>
            </value>
            <value>
                <fullName>Postcard</fullName>
            </value>
            <value>
                <fullName>Presentation</fullName>
            </value>
            <value>
                <fullName>Press Release</fullName>
            </value>
            <value>
                <fullName>Public Appearance</fullName>
            </value>
            <value>
                <fullName>Radio/TV Ad</fullName>
            </value>
            <value>
                <fullName>Seminar Handout</fullName>
            </value>
            <value>
                <fullName>Social Media Content</fullName>
            </value>
            <value>
                <fullName>Social Media Profile</fullName>
            </value>
            <value>
                <fullName>Sponsorship</fullName>
            </value>
            <value>
                <fullName>Video/Audio</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>FINRA Review</fullName>
                <isActive>false</isActive>
                <label>FINRA Review</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>