unpackaged/main/default/objects/Advertising_Item__c/fields/Approximate_Number_of_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Approximate_Number_of_Attendees__c</fullName>
    <label>Approximate Number of Attendees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>