unpackaged/main/default/objects/Advertising_Item__c/fields/Attendee_List_Required__c.field-meta.xml
<CustomField>
    <fullName>Attendee_List_Required__c</fullName>
    <formula>IF(
  OR( 
    TEXT(Event_Type__c) = &quot;Accredited Investor Association&quot;,
    TEXT(Event_Type__c) = &quot;General Alternative Investment Education&quot;,
    TEXT(Event_Type__c) = &quot;Private Placement Seminar&quot;
  ),
  true,
  false
)</formula>
    <label>Attendee List Required?</label>
    <type>Checkbox</type>
</CustomField>