unpackaged/main/default/objects/Advertising_Item__c/fields/Conditionally_Approved_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Conditionally_Approved_Next_Steps__c</fullName>
    <label>Conditionally Approved Next Steps</label>
    <type>TextArea</type>
</CustomField>