unpackaged/main/default/objects/Advertising_Item__c/fields/Date_of_Intended_First_Use__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Intended_First_Use__c</fullName>
    <label>Date of Intended First Use</label>
    <type>Date</type>
</CustomField>