unpackaged/main/default/objects/Advertising_Item__c/fields/Detailed_Talking_Points__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Talking_Points__c</fullName>
    <label>Detailed Talking Points</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>