unpackaged/main/default/objects/Advertising_Item__c/fields/Do_you_have_detailed_talking_points__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_detailed_talking_points__c</fullName>
    <label>Do you have detailed talking points?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>