unpackaged/main/default/objects/Advertising_Item__c/fields/Email_Address_Sent_From__c.field-meta.xml
<CustomField>
    <fullName>Email_Address_Sent_From__c</fullName>
    <label>Email Address Sent From</label>
    <type>Email</type>
</CustomField>