unpackaged/main/default/objects/Advertising_Item__c/fields/Estimated_Cost_of_Event__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Cost_of_Event__c</fullName>
    <label>Estimated Cost of Event</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>