unpackaged/main/default/objects/Advertising_Item__c/fields/Estimated_Cost_Per_Attendee__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Cost_Per_Attendee__c</fullName>
    <formula>Estimated_Cost_of_Event__c / Approximate_Number_of_Attendees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Cost Per Attendee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>