unpackaged/main/default/objects/Advertising_Item__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event</label>
    <referenceTo>Advertising_Item__c</referenceTo>
    <relationshipLabel>Advertising Items (Event)</relationshipLabel>
    <relationshipName>Event_Advertising_Item</relationshipName>
    <type>Lookup</type>
</CustomField>