unpackaged/main/default/objects/Advertising_Item__c/fields/Event_Cost_Paid_by_Sponsors__c.field-meta.xml
<CustomField>
    <fullName>Event_Cost_Paid_by_Sponsors__c</fullName>
    <label>Event Cost Paid by Sponsors</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>