unpackaged/main/default/objects/Advertising_Item__c/fields/Event_Cost_Percentage_Paid_by_Sponsors__c.field-meta.xml
<CustomField>
    <fullName>Event_Cost_Percentage_Paid_by_Sponsors__c</fullName>
    <formula>(Event_Cost_Paid_by_Sponsors__c / Estimated_Cost_of_Event__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Cost Percentage Paid by Sponsors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>