unpackaged/main/default/objects/Advertising_Item__c/fields/Event_Flow_Interview_ID__c.field-meta.xml
<CustomField>
    <fullName>Event_Flow_Interview_ID__c</fullName>
    <label>Event Flow Interview ID</label>
    <length>55</length>
    <type>Text</type>
</CustomField>