unpackaged/main/default/objects/Advertising_Item__c/fields/Event_Paid_By_Sponsors__c.field-meta.xml
<CustomField>
    <fullName>Event_Paid_By_Sponsors__c</fullName>
    <label>Event Paid By Sponsors</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Paid by Sponsors</fullName>
            </value>
            <value>
                <fullName>Partially Paid by Sponsors</fullName>
            </value>
            <value>
                <fullName>Fully Paid by Sponsors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>