unpackaged/main/default/objects/Advertising_Item__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Appreciation</fullName>
            </value>
            <value>
                <fullName>Retirement</fullName>
            </value>
            <value>
                <fullName>Social Security</fullName>
            </value>
            <value>
                <fullName>Medicare</fullName>
            </value>
            <value>
                <fullName>Accredited Investor Association</fullName>
            </value>
            <value>
                <fullName>General Alternative Investment Education</fullName>
            </value>
            <value>
                <fullName>Private Placement Seminar</fullName>
            </value>
            <value>
                <fullName>Professional Education</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>