unpackaged/main/default/objects/Advertising_Item__c/fields/FINRA_Review_Letter__c.field-meta.xml
<CustomField>
    <fullName>FINRA_Review_Letter__c</fullName>
    <label>FINRA Review Letter?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>