unpackaged/main/default/objects/Advertising_Item__c/fields/Has_Public_Appearance__c.field-meta.xml
<CustomField>
    <fullName>Has_Public_Appearance__c</fullName>
    <formula>IF(Public_Appearance__c != null,true,false)</formula>
    <label>Has Public Appearance</label>
    <type>Checkbox</type>
</CustomField>