unpackaged/main/default/objects/Advertising_Item__c/fields/Has_Radio_TV__c.field-meta.xml
<CustomField>
    <fullName>Has_Radio_TV__c</fullName>
    <formula>IF(Radio_TV_Ad__c != null,true,false)</formula>
    <label>Has Radio/TV</label>
    <type>Checkbox</type>
</CustomField>