unpackaged/main/default/objects/Advertising_Item__c/fields/hasSocialMediaProfile__c.field-meta.xml
<CustomField>
    <fullName>hasSocialMediaProfile__c</fullName>
    <formula>NOT(ISNULL(Social_Media_Profile__c))</formula>
    <label>hasSocialMediaProfile</label>
    <type>Checkbox</type>
</CustomField>