unpackaged/main/default/objects/Advertising_Item__c/fields/Include_Raffles_Gifts_etc__c.field-meta.xml
<CustomField>
    <fullName>Include_Raffles_Gifts_etc__c</fullName>
    <label>Include Raffles, Gifts, etc.?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>