unpackaged/main/default/objects/Advertising_Item__c/fields/Intended_Audience__c.field-meta.xml
<CustomField>
    <fullName>Intended_Audience__c</fullName>
    <label>Intended Audience</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current Clients</fullName>
            </value>
            <value>
                <fullName>Prospective Clients</fullName>
            </value>
            <value>
                <fullName>ERISA Participants</fullName>
            </value>
            <value>
                <fullName>Professionals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>