unpackaged/main/default/objects/Advertising_Item__c/fields/isRelatedToEvent__c.field-meta.xml
<CustomField>
    <fullName>isRelatedToEvent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isRelatedToEvent</label>
    <type>Checkbox</type>
</CustomField>