unpackaged/main/default/objects/Advertising_Item__c/fields/Link_to_Profile__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Profile__c</fullName>
    <label>Link to Profile</label>
    <type>Url</type>
</CustomField>