unpackaged/main/default/objects/Advertising_Item__c/fields/Link_to_Website_Administration__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Website_Administration__c</fullName>
    <label>Link to Website Administration</label>
    <type>Url</type>
</CustomField>