unpackaged/main/default/objects/Advertising_Item__c/fields/Participate_in_Drafting_Content__c.field-meta.xml
<CustomField>
    <fullName>Participate_in_Drafting_Content__c</fullName>
    <label>Participate in Drafting Content?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>