unpackaged/main/default/objects/Advertising_Item__c/fields/Posting_on_Social_Media__c.field-meta.xml
<CustomField>
    <fullName>Posting_on_Social_Media__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Posting on Social Media</label>
    <type>Checkbox</type>
</CustomField>