unpackaged/main/default/objects/Advertising_Item__c/fields/Produced_by_a_3rd_Party__c.field-meta.xml
<CustomField>
    <fullName>Produced_by_a_3rd_Party__c</fullName>
    <label>Produced by a 3rd Party?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>