unpackaged/main/default/objects/Advertising_Item__c/fields/Providing_Additional_Commentary__c.field-meta.xml
<CustomField>
    <fullName>Providing_Additional_Commentary__c</fullName>
    <label>Providing Additional Commentary?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>