unpackaged/main/default/objects/Advertising_Item__c/fields/Public_Appearance__c.field-meta.xml
<CustomField>
    <fullName>Public_Appearance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Public Appearance</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Advertising_Item__c.Advertising_Type__c</field>
            <operation>equals</operation>
            <value>Public Appearance</value>
        </filterItems>
        <filterItems>
            <field>Advertising_Item__c.Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Advertising_Item__c</referenceTo>
    <relationshipLabel>Advertising Items (Public Appearance)</relationshipLabel>
    <relationshipName>Public_Appearance_Advertising_Item</relationshipName>
    <type>Lookup</type>
</CustomField>