unpackaged/main/default/objects/Advertising_Item__c/fields/Public_Appearance_Date__c.field-meta.xml
<CustomField>
    <fullName>Public_Appearance_Date__c</fullName>
    <label>Public Appearance Date</label>
    <type>DateTime</type>
</CustomField>