unpackaged/main/default/objects/Advertising_Item__c/fields/Public_Appearance_Location__c.field-meta.xml
<CustomField>
    <fullName>Public_Appearance_Location__c</fullName>
    <label>Public Appearance Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>