unpackaged/main/default/objects/Advertising_Item__c/fields/Raffles_Gifts_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Raffles_Gifts_Explanation__c</fullName>
    <label>Raffles/Gifts Explanation</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>