unpackaged/main/default/objects/Advertising_Item__c/fields/Record_ID_for_Egnyte__c.field-meta.xml
<CustomField>
    <fullName>Record_ID_for_Egnyte__c</fullName>
    <formula>Id</formula>
    <label>Record ID for Egnyte</label>
    <type>Text</type>
</CustomField>