unpackaged/main/default/objects/Advertising_Item__c/fields/Repost_Link__c.field-meta.xml
<CustomField>
    <fullName>Repost_Link__c</fullName>
    <label>Repost Link</label>
    <type>Url</type>
</CustomField>