unpackaged/main/default/objects/Advertising_Item__c/fields/Review_Case__c.field-meta.xml
<CustomField>
    <fullName>Review_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Review Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Review Cases</relationshipLabel>
    <relationshipName>Advertising_Item_Review_Case</relationshipName>
    <type>Lookup</type>
</CustomField>