unpackaged/main/default/objects/Advertising_Item__c/fields/Social_Media_Platform__c.field-meta.xml
<CustomField>
    <fullName>Social_Media_Platform__c</fullName>
    <label>Social Media Platform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Instagram</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Twitter</fullName>
            </value>
            <value>
                <fullName>YouTube</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>