unpackaged/main/default/objects/Advertising_Item__c/fields/Social_Media_Profile__c.field-meta.xml
<CustomField>
    <fullName>Social_Media_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Social Media Profile</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Advertising_Item__c.Advertising_Type__c</field>
            <operation>equals</operation>
            <value>Social Media Profile</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Advertising_Item__c</referenceTo>
    <relationshipLabel>Advertising Items (Social Media Profile)</relationshipLabel>
    <relationshipName>Social_Media_Profile_Advertising_Item</relationshipName>
    <type>Lookup</type>
</CustomField>