unpackaged/main/default/objects/Advertising_Item__c/fields/Someone_Else_Paying__c.field-meta.xml
<CustomField>
    <fullName>Someone_Else_Paying__c</fullName>
    <label>Someone Else Paying?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>