unpackaged/main/default/objects/Advertising_Item__c/fields/Submission_Notes__c.field-meta.xml
<CustomField>
    <fullName>Submission_Notes__c</fullName>
    <label>Submission Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>