unpackaged/main/default/objects/Advertising_Item__c/fields/User_On_FA_Team__c.field-meta.xml
<CustomField>
    <fullName>User_On_FA_Team__c</fullName>
    <formula>CONTAINS(Financial_Advisor_Team__r.Users_On_Team__c,$User.Id)</formula>
    <label>User On FA Team</label>
    <type>Checkbox</type>
</CustomField>