unpackaged/main/default/objects/Advertising_Item__c/fields/Website_Username__c.field-meta.xml
<CustomField>
    <fullName>Website_Username__c</fullName>
    <label>Website Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>