unpackaged/main/default/objects/Advertising_Item__c/fields/Where_will_it_be_Posted__c.field-meta.xml
<CustomField>
    <fullName>Where_will_it_be_Posted__c</fullName>
    <label>Where will it be Posted?</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>