unpackaged/main/default/objects/Advertising_Item__c/fields/x3rd_Party__c.field-meta.xml
<CustomField>
    <fullName>x3rd_Party__c</fullName>
    <label>3rd Party</label>
    <length>255</length>
    <type>Text</type>
</CustomField>