unpackaged/main/default/objects/Advertising_Item__c/validationRules/Prevent_Modification_if_Case_is_Approved.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Modification_if_Case_is_Approved</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    NOT(ISNEW()),
    ISPICKVAL(Review_Case__r.Status, &#39;Approved&#39;)
)</errorConditionFormula>
    <errorMessage>The Case status is set to Approved, therefore the Advertising Item cannot be updated.</errorMessage>
</ValidationRule>