unpackaged/main/default/objects/Advertising_Item__c/validationRules/Prevent_Modification_if_Record_Locked.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Modification_if_Record_Locked</fullName>
    <active>true</active>
    <description>Prevent modification of the record if Record_Locked__c is true (set in Flow)</description>
    <errorConditionFormula>AND(
    Record_Locked__c = true,
    PRIORVALUE(Record_Locked__c) = true
)</errorConditionFormula>
    <errorMessage>The Status is set to Approved, therefore the Advertising Item cannot be updated.</errorMessage>
</ValidationRule>