unpackaged/main/default/objects/Advertising_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Advertising_Type__c</columns>
    <columns>Date_of_Intended_First_Use__c</columns>
    <columns>Intended_Audience__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Flow_Interview_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>