unpackaged/main/default/objects/Advertising_Item__c/listViews/Copy_of_All_template_view.listView-meta.xml
<ListView>
    <fullName>Copy_of_All_template_view</fullName>
    <columns>NAME</columns>
    <columns>Advertising_Type__c</columns>
    <columns>Date_of_Intended_First_Use__c</columns>
    <columns>Intended_Audience__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Flow_Interview_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>Team Advertising Request - Template view</label>
</ListView>