unpackaged/main/default/objects/Advertising_Item__c/listViews/My_Team_s_Advertising_Requests.listView-meta.xml
<ListView>
    <fullName>My_Team_s_Advertising_Requests</fullName>
    <columns>NAME</columns>
    <columns>Advertising_Type__c</columns>
    <columns>Review_Case__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Team&#39;s Advertising Requests</label>
</ListView>